# ia-lab2-fontes-de-dados

./: .gitignore  README.md
docs/: IA-UA02-Lab2-Fontes de Dados.docx
lab/: DEPENDENCIES.md  main.ipynb  pyproject.toml
